# Bioflow_Labs

./: .gitignore  README.md  app.py  pyproject.toml
bioflow/sim/: engine.py  heart.py  orchestrator.py  presets.py  state.py  validate.py  vessels.py
bioflow/ui/: controls.py  loop_view.py  main_window.py  plots.py  volume_bar.py
jobs/v1/: v1 blueprint.txt  v1 jobs list.txt  v1 structure.txt
jobs/v2/: v2 blueprint.txt
jobs/v3/: v3 blueprint.txt
tests/: test_conservation.py  test_engine_math.py  test_heart.py  test_nonlinearity.py  test_presets.py  test_smoke_full_loop.py  test_stability_edges.py  test_ui_smoke.py
